--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "lucide-react": "^0.441.0"
+    "lucide-react": "^0.441.0",
+    "recharts": "^2.12.7"   // 👈 added this line
   },
   "devDependencies": {
     "@types/node": "^20.11.18",
