--- a/package.json
+++ b/package.json
@@ -10,27 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/supabase-js": "^2.56.0",
-    "@tailwindcss/vite": "^4.1.12",
-    "chart.js": "^4.5.0",
-    "lucide-react": "^0.441.0",
-    "react": "^18.3.1",
-    "react-calendar": "^6.0.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "recharts": "^3.1.2"
+    "@supabase/auth-ui-react": "0.4.7",
+    "@supabase/auth-ui-shared": "0.1.8",
+    "@supabase/supabase-js": "2.56.0",
+    "@tailwindcss/vite": "4.1.12",
+    "chart.js": "4.5.0",
+    "lucide-react": "0.441.0",
+    "react": "18.3.1",
+    "react-calendar": "6.0.0",
+    "react-chartjs-2": "5.3.0",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.26.2",
+    "recharts": "3.1.2"
   },
   "devDependencies": {
-    "@types/node": "^20.11.18",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/node": "20.11.18",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
+    "@typescript-eslint/eslint-plugin": "5.54.0",
+    "@typescript-eslint/parser": "5.54.0",
+    "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "latest",
-    "eslint": "^8.50.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plu
+    "eslint": "8.50.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.1",
+    "postcss": "latest",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.5.4",
+    "vite": "5.2.0"
+  }
+}
